<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_menu_tilte">"My Nano Degree Apps!</string>
    <string name="spotify_streamer_launcher">"SPOTIFY STREAMER"</string>
    <string name="scores_app_launcher">"SCORES APP"</string>
    <string name="library_app_launcher">"LIBRARY APP"</string>
    <string name="build_it_bigger_launcher">"BUILD IT BIGGER"</string>
    <string name="xyz_reader_launcher">"XYZ READER"</string>
    <string name="capstone_my_own_app_launcher">"CAPSTONE: MY OWN APP"</string>
</resources>
