<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#DDEAF1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu"
        android:id="@+id/mainMenuTitle"
        android:layout_gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="62dp"
        android:layout_marginStart="62dp"
        android:textSize="20dp"
        android:textColor="#000000" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer_launcher"
        android:id="@+id/spotifyStreamerLauncher"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/mainMenuTitle"
        android:textColor="#000000"
        android:background="#F08C35"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_alignLeft="@+id/scoresAppLauncher"
        android:layout_alignStart="@+id/scoresAppLauncher"
        android:layout_alignRight="@+id/scoresAppLauncher"
        android:layout_alignEnd="@+id/scoresAppLauncher"
        android:onClick="onLaunchSpotifyStreamer"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scores_app_launcher"
        android:id="@+id/scoresAppLauncher"
        android:textColor="#000000"
        android:background="#F08C35"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_below="@+id/spotifyStreamerLauncher"
        android:layout_marginTop="10dp"
        android:layout_alignLeft="@+id/libraryAppLauncher"
        android:layout_alignStart="@+id/libraryAppLauncher"
        android:layout_alignRight="@+id/libraryAppLauncher"
        android:layout_alignEnd="@+id/libraryAppLauncher"
        android:onClick="onLaunchScoresApp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library_app_launcher"
        android:id="@+id/libraryAppLauncher"
        android:textColor="#000000"
        android:background="#F08C35"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_below="@+id/scoresAppLauncher"
        android:layout_marginTop="10dp"
        android:layout_alignLeft="@+id/buidItBiggerLauncher"
        android:layout_alignStart="@+id/buidItBiggerLauncher"
        android:layout_alignRight="@+id/buidItBiggerLauncher"
        android:layout_alignEnd="@+id/buidItBiggerLauncher"
        android:onClick="onLaunchLibraryApp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger_launcher"
        android:id="@+id/buidItBiggerLauncher"
        android:textColor="#000000"
        android:background="#F08C35"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/libraryAppLauncher"
        android:layout_alignLeft="@+id/xyzReaderLauncher"
        android:layout_alignStart="@+id/xyzReaderLauncher"
        android:layout_alignRight="@+id/xyzReaderLauncher"
        android:layout_alignEnd="@+id/xyzReaderLauncher"
        android:onClick="onLaunchBuidItBigger" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader_launcher"
        android:id="@+id/xyzReaderLauncher"
        android:textColor="#000000"
        android:background="#F08C35"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_below="@+id/buidItBiggerLauncher"
        android:layout_marginTop="10dp"
        android:layout_alignLeft="@+id/capstoneMyOwnAppLauncher"
        android:layout_alignStart="@+id/capstoneMyOwnAppLauncher"
        android:layout_alignRight="@+id/capstoneMyOwnAppLauncher"
        android:layout_alignEnd="@+id/capstoneMyOwnAppLauncher"
        android:onClick="onLaunchXyzReader" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone_my_own_app_launcher"
        android:id="@+id/capstoneMyOwnAppLauncher"
        android:textColor="#FFFFFF"
        android:background="#800000"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:layout_below="@+id/xyzReaderLauncher"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/mainMenuTitle"
        android:layout_alignEnd="@+id/mainMenuTitle"
        android:layout_alignLeft="@+id/mainMenuTitle"
        android:layout_alignStart="@+id/mainMenuTitle"
        android:onClick="onLaunchCapstoneMyOwnApp" />

</RelativeLayout>
